[package]
name = "firefly-rust"
version = "0.13.2"
edition = "2024"
rust-version = "1.89.0"
authors = ["Firefly Zero team"]
description = "Rust SDK for making Firefly Zero games"
repository = "https://github.com/firefly-zero/firefly-rust"
license = "MIT"
keywords = ["gamedev", "firefly-zero"]
categories = ["game-development", "no-std", "rendering", "api-bindings", "wasm"]

[features]
default = []
alloc = ["firefly-rust/alloc"]

[dependencies]
firefly-rust = "0.14.0"

# https://docs.rs/about/metadata
# https://github.com/firefly-zero/firefly-rust/issues/17
[package.metadata.docs.rs]
features = ["alloc"]
