[package]
name = "firefly-sudo"
version = "0.14.1"
edition = "2024"
rust-version = "1.95.0"
authors = ["Firefly Zero team"]
description = "SDK for accessing internal Firefly Zero API"
repository = "https://github.com/firefly-zero/firefly-sudo"
license = "MIT"
keywords = ["gamedev", "firefly-zero"]
categories = ["no-std", "api-bindings", "wasm"]

[features]
default = []
alloc = ["firefly-rust/alloc"]

[dependencies]
firefly-rust = "0.15.0"

# https://docs.rs/about/metadata
# https://github.com/firefly-zero/firefly-rust/issues/17
[package.metadata.docs.rs]
features = ["alloc"]
